# ParallelEgraph

./: .gitignore  AGENTS.md  Cargo.toml  FLAT_NODE_REFACTOR.md  IMPLEMENTATION_SUMMARY.md  README.md  bench.py  chatgpt-congruenceclosure-explanation.md  gen_bench.py
benches/: RESULTS.md  cr_scalability.rs  uf_ycsb.rs
benchmarks/2018-Goel-hwbench/: QF_UF_Heap_ab_br_max.smt2  QF_UF_Heap_ab_cti_max.smt2  QF_UF_Heap_ab_fp_max.smt2  QF_UF_Heap_ab_reg_max.smt2  QF_UF_Huffman_enc_ab_reg_max.smt2  QF_UF_adding.2.prop1_ab_cti_max.smt2  QF_UF_adding.3.prop1_ab_cti_max.smt2  QF_UF_adding.3.prop1_ab_reg_max.smt2  QF_UF_adding.4.prop1_ab_reg_max.smt2  QF_UF_anderson.1.prop1_ab_reg_max.smt2  QF_UF_anderson.3.prop1_ab_reg_max.smt2  QF_UF_anderson.4.prop1_ab_reg_max.smt2  QF_UF_anderson.5.prop1_ab_reg_max.smt2  QF_UF_anderson.7.prop1_ab_cti_max.smt2  QF_UF_anderson.8.prop1_ab_cti_max.smt2  QF_UF_anderson.8.prop1_ab_reg_max.smt2  QF_UF_at.1.prop1_ab_cti_max.smt2  QF_UF_at.2.prop1_ab_reg_max.smt2  QF_UF_at.3.prop1_ab_cti_max.smt2  QF_UF_at.4.prop1_ab_reg_max.smt2  (+279 more)
src/: collect_reduce.rs  egraph.rs  lib.rs  main.rs  process.rs  unionfind.rs
tests/: 01_trivial_sat.smt2  02_trivial_unsat.smt2  03_congruence_unsat.smt2  04_different_ops_sat.smt2  05_cascade_unsat.smt2  06_multiarg_unsat.smt2  07_partial_args_sat.smt2  08_transitivity_unsat.smt2  09_no_reverse_congruence_sat.smt2  10_deep_nesting_unsat.smt2  11_multi_diseq_sat.smt2  12_hidden_congruence_unsat.smt2  13_diamond_unsat.smt2  14_diamond_sat.smt2  15_stress_unsat.smt2  16_stress_multiarg_sat.smt2  regression.rs
(+3184 files in other folders)
