[package]
name = "parallel-egraph"
version = "0.1.0"
edition = "2021"

[dependencies]
yaspar = "2.7.0"
yaspar-ir = "2.7.2"
rayon = "1.10"
dashmap = "6"
tikv-jemallocator = "0.6"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
debug = true

[[bench]]
name = "uf_ycsb"
harness = false
